--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "tailwindcss": "^2.0.2"
     },
     "dependencies": {
+        "@splidejs/splide": "^3.2.1",
         "swiper": "7.0.1"
     }
 }
